--- a/uhm.html
+++ b/uhm.html
@@ -1,6 +1,7 @@
 <html>
 <head> 
-<title> asdfghjk </title>
-<body> 
-5ththtgh
+<title> (insert title here) </title>
+<style> 
+<body> (insert details here) </body>
+  {color: #008080; {font-size: 44px; </style>
 </head> </body> </html>
