--- a/uhm.html
+++ b/uhm.html
@@ -2,6 +2,6 @@
 <head> 
 <title> (insert title here) </title>
 <style> 
-<body> (insert details here) </body>
+<body> (insertsomething here) </body>
   {color: #008080; {font-size: 44px; </style>
 </head> </body> </html>
