--- a/uhm.html
+++ b/uhm.html
@@ -1,8 +1,8 @@
 <html>
 <head> 
-<title> (insert title here) </title>
+<title> (inserttitlehere) </title>
 <style> 
 body
-  (insertsomething here) </body>
+  (insertsomethinghere) </body>
   {color: #008080; {font-size: 44px; </style>
-</head> </body> </html>
+</head></html>
